UM-184-1: Pydantic refactor, new shop_info endpoint, product photo upload refactor, product photo deletion endpoint
