# validation/shops.py
@@ -1,11 +1,13 @@
 import re
 from typing import Optional
 
-from pydantic import BaseModel, validator, ConfigDict
+from flask import url_for
+from pydantic import BaseModel, ConfigDict, field_validator
+from pydantic_core.core_schema import ValidationInfo
 from sqlalchemy import func
 
 from models.shops import Shop
-from validation.products import PaginatedProductSchema
+from validation.products import PaginatedProductSchema, ProductInfoSchema
 
 
 class ShopCreateValid(BaseModel):
@@ -15,7 +17,7 @@ class ShopCreateValid(BaseModel):
     phone_number: str
     link: Optional[str]
 
-    @validator('phone_number')
+    @field_validator('phone_number')
     @staticmethod
     def phone_number_validation(value: str) -> str:
         regex = r'^\+380\d{9}$'
@@ -23,7 +25,7 @@ class ShopCreateValid(BaseModel):
             raise ValueError('Invalid phone number format. Must start with +380 and have 9 digits.')
         return value
 
-    @validator('name')
+    @field_validator('name')
     @staticmethod
     def shop_name_validator(value: str) -> str:
         if value is not None:
@@ -35,7 +37,7 @@ class ShopCreateValid(BaseModel):
                 raise ValueError('Shop with this name already exists')
         return value
 
-    @validator('description')
+    @field_validator('description')
     @staticmethod
     def shop_description_validator(value: str) -> str:
         if value is not None:
@@ -52,7 +54,7 @@ class ShopUpdateValid(BaseModel):
     phone_number: Optional[str] = None
     link: Optional[str] = None
 
-    @validator('phone_number')
+    @field_validator('phone_number')
     @staticmethod
     def phone_number_validation(value: str) -> str:
         regex = r'^\+380\d{9}$'
@@ -60,10 +62,10 @@ class ShopUpdateValid(BaseModel):
             raise ValueError('Invalid phone number format. Must start with +380 and have 9 digits.')
         return value
 
-    @validator('name')
+    @field_validator('name')
     @staticmethod
-    def shop_name_validator(value: str, values) -> str:
-        owner_id = values.get('owner_id')
+    def shop_name_validator(value: str, values: ValidationInfo) -> str:
+        owner_id = values.data.get('owner_id')
         if value is not None:
             regex = r"^[A-Za-zА-ЩЬЮЯҐЄІЇа-щьюяґєії0-9'.,;\- ]+$"
             if not re.match(regex, value) or len(value) > 50:
@@ -74,7 +76,7 @@ class ShopUpdateValid(BaseModel):
                 raise ValueError('Shop with this name already exists')
         return value
 
-    @validator('description')
+    @field_validator('description')
     @staticmethod
     def shop_description_validator(value: str) -> str:
         if value is not None:
@@ -96,6 +98,46 @@ class ShopSchema(BaseModel):
 
     model_config = ConfigDict(from_attributes=True)
 
+    @field_validator("photo_shop", mode="after")
+    @classmethod
+    def set_photo_shop(cls, v):
+        if v:
+            image = url_for('static', filename=f'media/shops/{v}',
+                            _external=True)
+            return image
+        return v
 
-class ShopWithProductsSchema(ShopSchema):
+    @field_validator("banner_shop", mode="after")
+    @classmethod
+    def set_banner_shop(cls, v):
+        if v:
+            image = url_for('static', filename=f'media/banner_shops/{v}',
+                            _external=True)
+            return image
+        return v
+
+
+class ShopWithProductsSchema(BaseModel):
+    shop: ShopSchema
     products: PaginatedProductSchema
+
+    @classmethod
+    def load_list(cls, item_list, shop):
+        result = []
+        shop = ShopSchema.model_validate(shop)
+        for product_tuple in item_list:
+            product_id = product_tuple[0]
+            product_name = product_tuple[1]
+            price = product_tuple[2]
+            product_status = product_tuple[3]
+            is_unique = product_tuple[4]
+            photo = product_tuple[5]
+
+            schema = ProductInfoSchema(id=product_id,
+                                       product_name=product_name,
+                                       price=price,
+                                       product_status=product_status,
+                                       is_unique=is_unique,
+                                       photo=photo)
+            result.append(schema)
+        return cls(shop=shop, products=PaginatedProductSchema(data=result))
